# casper-erc1155

./: Cargo.toml  Makefile
erc1155/: Cargo.toml
erc1155/src/: detail.rs  lib.rs  total_supply.rs
example/erc1155-tests/: Cargo.toml
example/erc1155-tests/src/: integration_tests.rs  test_fixture.rs
example/erc1155-tests/wasm/: erc1155_token.wasm
example/erc1155-token/: Cargo.toml
testing/erc1155-test/: Cargo.toml
testing/erc1155-test-call/: Cargo.toml
testing/erc1155-test-call/src/: main.rs
testing/erc1155-test/src/: main.rs
testing/tests/: Cargo.toml
testing/tests/src/: lib_integration_tests.rs
testing/tests/wasm/: erc1155_test.wasm  erc1155_test_call.wasm
