[package]
name = "erc1155-tests"
version = "0.1.0"
authors = ["Lucas Jovanovich @en0c-026"]
edition = "2018"

[dev-dependencies]
casper-erc1155 = { version = "0.1.0", path = "../../erc1155" }
casper-engine-test-support = { version = "4.0.0", default-features = false }
casper-execution-engine = { version = "4.0.0", default-features = false }
casper-types = { version = "2.0.0", default-features = false }
base64 = "0.13.0"
blake2 = "0.9.2"
hex = { version = "0.4.3", default-features = false }
rand = { version = "0.8.5", default-features = false }

[[bin]]
name = "erc1155-tests"
path = "src/integration_tests.rs"
bench = false
doctest = false
