[package]
name = "erc1155-token"
authors = ["Lucas Jovanovich @en0c-026"]
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "2.0.0"
casper-types = { version = "2.0.0", default-features = false }
casper-erc1155 = { path = "../../erc1155" }

[[bin]]
name = "erc1155_token"
path = "src/main.rs"
bench = false
doctest = false
test = false
