[package]
name = "erc1155-test-call"
version = "0.1.0"
authors = ["Michał Papierski <michal@casperlabs.io>"]
edition = "2018"

[[bin]]
name = "erc1155_test_call"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-erc1155 = { path = "../../erc1155" }
casper-contract = { version = "2.0.0", default-features = false }
casper-types = { version = "2.0.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
base64 = { version = "0.21.2", default-features = false }
