[package]
name = "erc1155-test"
version = "0.1.0"
authors = ["Lucas Jovanovich @en0c-026"]
edition = "2018"

[[bin]]
name = "erc1155_test"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = { version = "2.0.0", default-features = false }
casper-types = { version = "2.0.0", default-features = false }
casper-erc1155 = { path = "../../erc1155" }
