[package]
name = "tests"
version = "0.1.0"
edition = "2018"
authors = ["Lucas Jovanovich @en0c-026"]

[dependencies]
casper-types = { version = "2.0.0", default-features = false }
casper-engine-test-support = { version = "4.0.0", default-features = false }
casper-execution-engine = { version = "4.0.0", default-features = false }
once_cell = { version = "1.17.1", default-features = false }

[lib]
name = "tests"
bench = false
doctest = false
